<resources>
    <string name="app_name">Musician</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="title_activity_now_playing">Now Playing</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_playing">Musician</string>
    <string name="title_activity_songs">SongsActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <string-array name="song_properties">
        <item>Share via</item>
        <item>Set as</item>
        <item>Add to playlist</item>
        <item>Add to quick list</item>
        <item>Delete</item>
    </string-array>
    <string name="title_activity_current_playlist">Now playing</string>
    <string name="title_activity_main">Musician</string>
    <string name="albumart">AlbumArt</string>
    <string name="previous">Previous</string>
    <string name="play_pause">Play/Pause</string>
    <string name="next">Next</string>
    <string name="notification">Notification</string>
    <string name="artist_name">Artist name</string>
    <string name="song_name">Song name</string>
    <string name="nothing">Nothing…</string>
    <string name="allow">Allow</string>
    <string name="none">None</string>
    <string name="playlist">Playlist</string>
    <string name="allow_permission">Allow Permission</string>
    <string name="now_playing">Now playing</string>
    <string name="search_songs">Search songs</string>
    <string name="album_art">Album art</string>
    <string name="_0_0">0.0</string>
    <string name="title_activity_music">Musician</string>
    <string name="options">Options</string>
    <string name="shuffle">Shuffle</string>
    <string name="shuffle_all">Shuffle all</string>
    <string name="album_name">Album name</string>
    <string name="elapsed_time">0.0</string>
    <string name="title_activity_drawer">Musician</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="music_library">Music library</string>
    <string name="playlists">Playlists</string>
    <string name="now_playing_queue">Now Playing Queue</string>
    <string name="playing">Playing</string>
    <string name="about">About</string>
    <string name="music_player">Music Player</string>

    <!--menu items-->
    <string name="play">Play</string>
    <string name="add_to_playlist">Add to playlist</string>
    <string name="go_to_album">Go to album</string>
    <string name="go_to_artist">Go to artist</string>
    <string name="add_to_queue">Add to queue</string>
    <string name="play_next">Play next</string>
    <string name="new_playlist">New playlist</string>
    <string name="share">Share</string>
    <string name="delete_from_device">Delete from device</string>
    <string name="remove_from_queue">Remove from queue</string>

    <string name="menu_show_as">View As</string>
    <string name="menu_show_as_entry_list">List</string>
    <string name="menu_show_as_entry_grid">Grid</string>
    <string name="menu_show_as_entry_default">Default</string>

    <string name="menu_sort_by">Sort by</string>
    <string name="sort_order_entry_az">A-Z</string>
    <string name="sort_order_entry_za">Z-A</string>
    <string name="sort_order_entry_artist">Artist</string>
    <string name="sort_order_entry_album">Album</string>
    <string name="sort_order_entry_year">Year</string>
    <string name="sort_order_entry_track_number">Track Number</string>
    <string name="sort_order_entry_duration">Duration</string>
    <string name="sort_order_entry_date_added">Date added</string>
    <string name="sort_order_entry_track_list">Track list</string>
    <string name="sort_order_entry_number_of_songs">Number of songs</string>
    <string name="sort_order_entry_number_of_albums">Number of albums</string>
    <string name="sort_order_entry_filename">Filename</string>

    <string name="songs">Songs</string>
    <string name="albums">Albums</string>
    <string name="artists">Artists</string>
    <string name="title_activity_search">Search</string>

</resources>
