<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_music_library"
            android:icon="@drawable/ic_menu_music_library"
            android:title="@string/music_library" />
        <item
            android:id="@+id/nav_playlists"
            android:icon="@drawable/ic_menu_playlists"
            android:title="@string/playlists" />
        <item
            android:id="@+id/nav_now_playing_queue"
            android:icon="@drawable/default_albumart"
            android:title="@string/now_playing_queue" />
    </group>

    <item android:title="@string/music_player">
        <menu>
            <item
                android:id="@+id/nav_player_state"
                android:icon="@drawable/ic_action_play"
                android:title="@string/playing" />
            <item
                android:id="@+id/nav_about"
                android:icon="@android:drawable/ic_menu_info_details"
                android:title="@string/about" />
        </menu>
    </item>

</menu>
