<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="56dp"
    android:background="#093458">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/noti_icon"
            android:layout_width="64dp"
            android:layout_height="match_parent"
            android:background="@drawable/custom_ripple_effect"
            android:clickable="false"
            android:contentDescription="@string/notification"
            app:srcCompat="@drawable/default_albumart" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/text_margin"
            android:layout_marginStart="@dimen/text_margin"
            android:layout_weight="1"
            android:background="@drawable/custom_ripple_effect"
            android:clickable="false"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/noti_current_song"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center|start"
                android:maxLines="1"
                android:text="@string/song_name"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/accentMaterialDark"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/noti_current_artist_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:maxLines="1"
                android:text="@string/artist_name"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/accentMaterialDark"
                android:textSize="13sp" />

        </LinearLayout>

        <ImageButton
            android:id="@+id/noti_previous_song"
            android:layout_width="56dp"
            android:layout_height="match_parent"
            android:layout_gravity="center|end"
            android:background="@drawable/custom_ripple_effect"
            android:contentDescription="@string/previous"
            app:srcCompat="@drawable/noti_prev_song" />

        <ImageButton
            android:id="@+id/noti_play_pause"
            android:layout_width="56dp"
            android:layout_height="match_parent"
            android:layout_gravity="center|end"
            android:background="@drawable/custom_ripple_effect"
            android:contentDescription="@string/play_pause"
            app:srcCompat="@drawable/noti_play_pause" />

        <ImageButton
            android:id="@+id/noti_next_song"
            android:layout_width="56dp"
            android:layout_height="match_parent"
            android:layout_gravity="center|end"
            android:background="@drawable/custom_ripple_effect"
            android:contentDescription="@string/next"
            app:srcCompat="@drawable/noti_next_song" />

    </LinearLayout>

</RelativeLayout>
