<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="musician.kuet.musta.MainActivity">

    <LinearLayout
        android:id="@+id/fake_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/custom_dialog_button_disabled_color"
        android:gravity="center"
        android:visibility="visible">

        <Button
            android:id="@+id/allow_permission"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/winset_list_divider_color"
            android:text="@string/allow"
            android:textColor="@color/settings_top_group_color_1" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/main_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/action_bar_activity_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar_main"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                android:clickable="true"
                android:focusable="true"
                app:popupTheme="@style/AppTheme.PopupOverlay" />

        </android.support.design.widget.AppBarLayout>

        <include
            layout="@layout/content_main"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <LinearLayout
            android:id="@+id/player_layout"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/color_app_tw_actionbar_back_color_selected"
            android:orientation="horizontal"
            android:visibility="visible">

            <ImageView
                android:id="@+id/currentSongAlbumArtState"
                android:layout_width="?attr/actionBarSize"
                android:layout_height="match_parent"
                android:background="@drawable/default_albumart"
                android:contentDescription="@string/playlist" />

            <com.rey.material.widget.LinearLayout
                android:id="@+id/showPlayerState"
                style="@style/ButtonRippleStyleWhite"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="7"
                android:clickable="true"
                android:focusable="true"
                android:orientation="vertical"
                app:rd_enable="true">

                <TextView
                    android:id="@+id/currentSongState"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/songList"
                    android:layout_alignParentTop="true"
                    android:layout_toEndOf="@+id/songList"
                    android:layout_weight="5"
                    android:gravity="center"
                    android:maxLines="1"
                    android:text="@string/nothing"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="@color/accentMaterialDark"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/currentSongArtistNameState"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:ellipsize="end"
                    android:gravity="center"
                    android:maxLines="1"
                    android:text="@string/none"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="#cfcfff"
                    android:textSize="13sp" />
            </com.rey.material.widget.LinearLayout>

            <com.rey.material.widget.ImageButton
                android:id="@+id/playPauseState"
                style="@style/ButtonRippleStyleWhite"
                android:layout_width="56dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:src="@drawable/ic_action_play"
                app:rd_enable="true" />
        </LinearLayout>
    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>
