<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/llBottomSheetPlayer"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/color_rectangle_new"
    android:orientation="vertical"
    app:behavior_hideable="true"
    app:behavior_peekHeight="56dp"
    app:layout_behavior="android.support.design.widget.BottomSheetBehavior"
    tools:showIn="@layout/activity_music">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:clickable="true"
        android:focusable="true"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/tempBottomNav"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:background="?attr/selectableItemBackground"
            android:baselineAligned="false"
            android:clickable="true"
            android:focusable="true"
            android:orientation="horizontal"
            android:paddingEnd="10dp"
            android:paddingStart="20dp">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:clickable="false"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/song_title"
                    style="@style/TextAppearance.Widget.AppCompat.Toolbar.Title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:ellipsize="marquee"
                    android:fadingEdge="horizontal"
                    android:marqueeRepeatLimit="marquee_forever"
                    android:scrollHorizontally="true"
                    android:singleLine="true"
                    android:text="@string/song_name" />

                <TextView
                    android:id="@+id/song_artist"
                    style="@style/TextAppearance.Widget.AppCompat.Toolbar.Subtitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="@string/artist_name" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/shuffle"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:contentDescription="@string/shuffle"
                    android:scaleType="center"
                    android:src="@drawable/ic_action_shuffle"
                    android:visibility="gone"
                    tools:targetApi="donut" />

                <ImageView
                    android:id="@+id/ivPlayPause"
                    android:layout_width="56dp"
                    android:layout_height="match_parent"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:clickable="true"
                    android:contentDescription="@string/play_pause"
                    android:focusable="true"
                    android:scaleType="center"
                    app:srcCompat="@mipmap/media_action_play"
                    tools:targetApi="donut" />
            </LinearLayout>
        </LinearLayout>

        <SeekBar
            android:id="@+id/song_progress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:maxHeight="2dp"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:paddingTop="10dp"
            android:progress="30"
            android:tag="tint_accent_color" />


        <TextView
            android:id="@+id/song_album"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:visibility="visible" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="30dp"
            android:paddingRight="30dp">

            <TextView
                android:id="@+id/song_elapsed_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:paddingStart="25dp" />

            <TextView
                android:id="@+id/song_duration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:paddingEnd="25dp" />
        </RelativeLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:orientation="horizontal"
            android:paddingBottom="5dp"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:paddingTop="5dp">

            <net.steamcrafted.materialiconlib.MaterialIconView
                android:id="@+id/previous"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:layout_marginStart="30dp"
                android:layout_weight="0.6"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:focusable="true"
                android:scaleType="center"
                app:materialIcon="skip_previous"
                app:materialIconColor="?attr/iconColor"
                app:materialIconSize="35dp" />

            <FrameLayout
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1">


                <android.support.design.widget.FloatingActionButton
                    android:id="@+id/playPauseFloating"
                    android:layout_width="55dp"
                    android:layout_height="55dp"
                    android:layout_gravity="center"
                    android:clickable="true"
                    android:focusable="true"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ic_action_play"
                    android:tag="bg_tint_accent_color" />
            </FrameLayout>

            <net.steamcrafted.materialiconlib.MaterialIconView
                android:id="@+id/next"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:layout_marginEnd="30dp"
                android:layout_weight="0.6"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:focusable="true"
                android:scaleType="center"
                app:materialIcon="skip_next"
                app:materialIconColor="?attr/iconColor"
                app:materialIconSize="35dp" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>